# ChangeLog for net-libs/webkit-gtk
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.114 2011/07/24 15:13:00 eva Exp $

  24 Jul 2011; Gilles Dartiguelongue <eva@gentoo.org> -webkit-gtk-1.2.5.ebuild,
  -webkit-gtk-1.2.6.ebuild:
  Clean up old revisions, due to various security bugs.

  15 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  webkit-gtk-1.4.1-r200.ebuild, webkit-gtk-1.4.1-r300.ebuild:
  Marked ~ppc/~ppc64 (bug 371833)

  19 Jun 2011; Christoph Mende <angelos@gentoo.org>
  webkit-gtk-1.4.1-r200.ebuild, webkit-gtk-1.4.1-r300.ebuild,
  +files/webkit-gtk-1.4.1-libpng15.patch:
  Fix building with libpng-1.5

  12 Jun 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  webkit-gtk-1.4.1-r200.ebuild, webkit-gtk-1.4.1-r300.ebuild:
  Add proper introspection deps, fixes bug 371143

  11 Jun 2011; Raúl Porcel <armin76@gentoo.org> webkit-gtk-1.4.1-r200.ebuild,
  webkit-gtk-1.4.1-r300.ebuild:
  Add ~alpha/~ia64/~sparc wrt #365331

*webkit-gtk-1.4.1-r300 (11 Jun 2011)
*webkit-gtk-1.4.1-r200 (11 Jun 2011)

  11 Jun 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  +webkit-gtk-1.4.1-r200.ebuild, +webkit-gtk-1.4.1-r300.ebuild:
  Add 1.4.1, gtk2 (-r2xx) and gtk3 (-r3xx) versions, drop keywords, bug 365331

  05 Apr 2011; Christoph Mende <angelos@gentoo.org>
  files/webkit-gtk-1.2.7-libpng15.patch:
  Converted libpng15 patch from DOS to Unix

  04 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> webkit-gtk-1.2.7.ebuild,
  +files/webkit-gtk-1.2.7-libpng15.patch:
  Fix building with media-libs/libpng >= 1.5 wrt #355015 by Lars Wendler.

  13 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> webkit-gtk-1.2.7.ebuild:
  ppc64 stable wrt #354799

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> webkit-gtk-1.2.7.ebuild:
  alpha/arm/ia64/sparc stable wrt #354209

  11 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  webkit-gtk-1.2.7.ebuild:
  ppc stable wrt #354209
