@@ -9,15 +9,18 @@ AUX webkit-gtk-1.2.7-libpng15.patch 1657 RMD160 19cec5b29437313372b9b25d43029105
 AUX webkit-gtk-1.4.1-libpng15.patch 2571 RMD160 427d9746f365f27c66be0c73a41c7034754e2522 SHA1 0481a4039c79414449262392758a63e97157ff93 SHA256 c014d8380270a73d96069f5eac343fab40d1a1112b03c32e5e6365da89ab7705
 DIST webkit-1.2.7.tar.gz 6615990 RMD160 f36b3ae05693e0eeb4d1936ceee52b6fe1517e57 SHA1 e9afc573d2459794c3749ba404f2187f9dcc9ed3 SHA256 228a80b3f0132db1342708e8ef7738996f05e30393e0187acf4cab987283718b
 DIST webkit-1.4.1.tar.gz 8494373 RMD160 da77eea6b7abb0e1ffeb322d747386a2c4b7cc9c SHA1 5813112e94315db747c68d6b45ca763a45774357 SHA256 d0db4f6c8e4dd73ebb7fd34c8ca21b0b3b245ac7162d884e789a2104ca631c64
+DIST webkit-1.4.2.tar.gz 8504310 RMD160 e1de3cd5576d7ccc771475cda8c0e3b59aba1af7 SHA1 675ae0bfef56b8519f3f00b04fc7baf72215bd3b SHA256 dee6336b5366e952f67a18a66dca2edce95a8e70f591dbc7fc30cf30b5fdb9ba
 EBUILD webkit-gtk-1.2.7.ebuild 3407 RMD160 3a6cd547f0f87d89004f7f52eb357dfcfde27845 SHA1 27bd1afe3ebc2a488e60565664d4fe7f87f3fb15 SHA256 5d69d1974dd40598e47ef676af136f0a63ce866b241fbef32d0256796256061d
 EBUILD webkit-gtk-1.4.1-r200.ebuild 3662 RMD160 ede4e830b21aad6b2ae5752cba2a6a036a686973 SHA1 d2cbec00bc75d5e7ec6127f67642ce98062b0bec SHA256 ffce5657d6b35e3f79cbeb0626c733fc1b7205cdda581349a474605c00895bc2
 EBUILD webkit-gtk-1.4.1-r300.ebuild 3734 RMD160 768fcb8a9c33381d638428a6deff6e05244a8c91 SHA1 899a884f61eaf597ff573fdca3932fea397ecbaa SHA256 135b05807d831e2dddd3fc54d2bafa9c22108206c3fa862e83d3d085db191260
-MISC ChangeLog 22278 RMD160 e9755da2b73c2e4c3dcf05624199c54965d570ce SHA1 bec70e1b63b560215f56e2041413cc51d98dcad3 SHA256 5c0b76f52929527417d495dc4a08542170787af1bd4878a223ab937bedf35e49
+EBUILD webkit-gtk-1.4.2-r200.ebuild 3596 RMD160 a7ab531e83987fdad87436afc73bd5a37654b653 SHA1 70f54c464c6d28644b916c28f7c4484ac0588aa0 SHA256 1645a594522ef089dabed2bc3798ca6df956d10c18c84e81bf6dd37a6c535259
+EBUILD webkit-gtk-1.4.2-r300.ebuild 3668 RMD160 af0f36a54d1f604d9dc2c2e853ff36579b350447 SHA1 7f8c2a6b4c69eeb7783086edb595ae30f93ca730 SHA256 277c10771f4a376c167dbc39085e7158c95a633045a8d35251d6be3542e3bc93
+MISC ChangeLog 22532 RMD160 88a249d0433359e8a166ab683a9c882b4615a5ba SHA1 9eda403e0fa0767c4d0e293b4c2ad928d8025254 SHA256 c00400c3cac2d61c282d39c3e8f31bc8f6adb17e38b693d18c3f0be42efab44d
 MISC metadata.xml 439 RMD160 ed901542890ff2bf45ff3302f79b48cc0ba9e5f8 SHA1 746abe4ff5e3911f962a40f23fe1c521d32adca8 SHA256 57260da7cdd67c9be679d44a3deba705ff381fde47433b5d22ccd1402ecabdf3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk4sNoEACgkQ1fmVwcYIWAYKbQCgp6Qi2Dgjgm9TqKHi+ELAUngD
-8WIAoJuNViIHQWcV6nM2OQFJWiBaceoL
-=O6xg
+iEYEARECAAYFAk4skRwACgkQ1fmVwcYIWAY8XwCdFYJZb312o6tOZTfNogipWyfB
+jY4AoMzk44BLQArLGaWho4qx+Q1SpVhc
+=45zK
 -----END PGP SIGNATURE-----
