@@ -1,6 +1,13 @@
 # ChangeLog for net-libs/webkit-gtk
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.114 2011/07/24 15:13:00 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.115 2011/07/24 21:39:34 eva Exp $
+
+*webkit-gtk-1.4.2-r300 (24 Jul 2011)
+*webkit-gtk-1.4.2-r200 (24 Jul 2011)
+
+  24 Jul 2011; Gilles Dartiguelongue <eva@gentoo.org>
+  +webkit-gtk-1.4.2-r200.ebuild, +webkit-gtk-1.4.2-r300.ebuild:
+  Version bump. Stability fixes, includes libpng-1.5 patch.
 
   24 Jul 2011; Gilles Dartiguelongue <eva@gentoo.org> -webkit-gtk-1.2.5.ebuild,
   -webkit-gtk-1.2.6.ebuild:
